# EfMobileTestWork

./: .env.sample  README.md  pyproject.toml  requirements.txt
business/: urls.py  views.py
config/: settings.py  urls.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: init_pirmissions.py
users/migrations/: 0001_initial.py  0002_permission_rolepermission.py
